@@ -2,6 +2,7 @@
 v4.3.0-git
 ----------
 
+[mms] Added the addGroup API method.
 [mjr] Add ability to add special characters to the alpha pager.
 [jan] Return ETags with browse() API method.
 [jan] Support multi-value RDNs in LDAP DN attributes (horde@iotti.biz, Request
